source/angular-webserver/kubernetes-scripts/kubernetes-chat-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: angularwebserver-service
spec:
  selector:
    app: angularwebserver
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
